# doe-egot-gsp

./: CMakeLists.txt  GSPConfig.cmake.in  README.md
src/: CMakeLists.txt  https_server.cpp  main.cpp
src/ecs/: CMakeLists.txt
src/https/: CMakeLists.txt  https_server.cpp
src/https/include/https/: handle_request.hpp  server_certificates.hpp
src/include/: handle_request.hpp  https_server.hpp  server_certificates.hpp
tests/: CMakeLists.txt
